@@ -2,6 +2,7 @@
 
 function my_page()
 {
+    translate('layout');
     $title = $content =  NULL;
 
     if (@$message = $_SESSION['Layout_User_Message']) {
@@ -16,7 +17,7 @@ function my_page()
     if (!(@$lo_command = $_REQUEST['lo_command'])) {
         $lo_command = 'user_form';
     }
-    translate('layout');
+
     switch ($lo_command) {
     case 'user_form':
         $title = _('Display settings');
@@ -46,17 +47,15 @@ class Layout_User_Settings {
         My_Page::addHidden($form, 'layout');
 
         $form->addHidden('lo_command', 'save_settings');
-        translate('layout');
+
         $css = Layout::getAlternateStyles();
         if ($css) {
             $form->addSelect('alternate', $css);
             $form->setMatch('alternate', PHPWS_Cookie::read('layout_style'));
             $form->setLabel('alternate', _('Available styles'));
             $form->addSubmit(_('Save settings'));
-            translate();
         } else {
             $blank = _('No alternate style sheets available.');
-            translate();
             return $blank;
         }
 
