@@ -4,7 +4,9 @@
    * @version $Id$
    */
 
+translate('layout');
 Layout::checkJavascript();
 Layout::checkSettings();
+translate();
 
 ?>
